new cursor logo

--- a/dashboard.html
+++ b/dashboard.html
@@ -234,9 +234,10 @@
         }
 
         .header-icon {
-            color: #171717;
             margin-right: 6px;
             vertical-align: middle;
+            width: 32px;
+            height: 32px;
         }
 
         .card-icon {
@@ -263,9 +264,7 @@
 </head>
 <body>
     <div class="header">
-        <h1><svg class="header-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
-        </svg> Cursor Usage Dashboard</h1>
+        <h1 style="display: flex; justify-content: center; align-items: center;"><img src="cursor.svg" alt="Cursor Logo" class="header-icon" > Cursor Usage Dashboard</h1>
         <p>Complete analytics for your AI coding assistant</p>
     </div>
 
